[gd_scene load_steps=3 format=3 uid="uid://xcgiep448sa5"]

[ext_resource type="Script" path="res://scenes/scripts/door.gd" id="1_aanen"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb3jh"]
size = Vector2(48, 70)

[node name="Door" type="Area2D"]
collision_layer = 4
script = ExtResource("1_aanen")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sb3jh")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="DropoffMarker" type="Marker2D" parent="."]
position = Vector2(0, 16)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
